# VideoPlayer

./: README.md  build.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/longkd/videoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/longkd/videoplayer/: Application.kt  MainActivity.kt  NativePlayer.kt  ThumbnailCache.kt  Utils.kt  VideoMessageAdapter.kt  VideoPlayerManager.kt  VisibleVideoDetector.kt
app/src/main/java/com/longkd/videoplayer/cache/: ThumbnailCache.kt
app/src/main/java/com/longkd/videoplayer/interfaces/: ThumbnailProvider.kt  VideoPlayer.kt
app/src/main/java/com/longkd/videoplayer/model/: VideoMessage.kt
app/src/main/java/com/longkd/videoplayer/module/: AppModule.kt
app/src/main/java/com/longkd/videoplayer/player/: VideoPlayerManager.kt
app/src/main/java/com/longkd/videoplayer/services/: ThumbnailService.kt
app/src/main/java/com/longkd/videoplayer/ui/: FullScreenVideoDialogFragment.kt  FullscreenVideoFragment.kt  ListVideoFragment.kt  MainActivity.kt  VideoMessageAdapter.kt  VideoViewHolder.kt
app/src/main/res/drawable/: ic_exit_full_screen.xml  ic_pause.xml  ic_play.xml
app/src/main/res/layout/: activity_main.xml  dialog_fullscreen.xml  fragment_fullscreen.xml  fragment_list_video.xml  item_video_received.xml  item_video_sent.xml  view_video_player.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/longkd/videoplayer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
(+3 files in other folders)
